--- a/src/app/components/CkoGrid/styles.css
+++ b/src/app/components/CkoGrid/styles.css
@@ -2,4 +2,7 @@
   box-sizing: border-box;
   border-collapse: collapse;
   border-spacing: 0;
+  width: 100%;
+  font-size: 11px;
+  background-color: white;
 }
